--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,6 +1,7 @@
 .sidebar {
   color: white;
   flex: 0.3;
+  flex-grow: 1;
   background-color: var(--slack-color);
   border-top: 1px solid #49274b;
   max-width: 260px;
