--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -2,6 +2,7 @@
   color: white;
   flex: 0.3;
   flex-grow: 1;
+  flex-basis: 0;
   background-color: var(--slack-color);
   border-top: 1px solid #49274b;
   max-width: 260px;
